<resources>
    <string name="app_name">Dayzee</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferrence">Preferences</string>
    <string name="next">Next</string>
    <string name="select_what_you_like">Select What You Like</string>
    <string name="my_city">My City</string>
    <string name="sports">Sports</string>
    <string name="esport">Esport</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="esports">Esports</string>
    <string name="youtube">Youtube</string>
    <string name="religions">Religions</string>
    <string name="culture_n_amp_loisirs"><![CDATA[Culture \n & Loisirs]]></string>
    <string name="films_n_amp_series"><![CDATA[Films \n & Series]]></string>
    <string name="shopping">Shopping</string>
    <string name="holidays">Holidays</string>
    <string name="holiday">Holiday</string>
    <string name="calendrier_n_interessant">Interesting\n Calendars</string>
    <string name="done">Done</string>
    <string name="how_much_do_you_like_it">How Much Do You Like It?</string>
    <string name="back">Back</string>
    <string name="suggestions">Suggestions</string>
    <string name="ok">OK</string>
    <string name="we_found_some_account_you_might_like">We found some account you might like :</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="share_profile">SHARE PROFILE</string>
    <string name="modify">Modify</string>
    <string name="follow">Follow</string>
    <string name="name_you_want_to_appear">Username</string>
    <string name="your_name">Your name</string>
    <string name="from">From</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="account_status">Account status</string>
    <string name="timenote_date_format">Date format appearance of events</string>
    <string name="youtube_channel">Youtube</string>
    <string name="describe_yourself">Describe yourself</string>
    <string name="settings">Settings</string>
    <string name="general">GENERAL</string>
    <string name="edit_my_personnals_informations">Edit my personnals informations</string>
    <string name="change_password">Change password</string>
    <string name="private_account">Private Account</string>
    <string name="asked_sent">Asked sent</string>
    <string name="push">PUSH</string>
    <string name="push_notifications">Push notifications</string>
    <string name="certified_push_notifications">Certified\' push notifications</string>
    <string name="default_settings">DEFAULT SETTINGS</string>
    <string name="timenote_visibility_format">Who can see my events</string>
    <string name="timenote_visibility">Dayzee visibility</string>
    <string name="others">OTHERS</string>
    <string name="confidentiality_politic">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="send_comments">Send comments</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="new_timenote">New Event</string>
    <string name="take_add_a_picture">ADD PICTURE(S)/VIDEO</string>
    <string name="choose_a_color">OR CHOOSE A BACKGROUND COLOR</string>
    <string name="when">When</string>
    <string name="to">To</string>
    <string name="where">Where</string>
    <string name="share_with">Share With</string>
    <string name="category">Category</string>
    <string name="none">None</string>
    <string name="title">Title</string>
    <string name="preview">Preview</string>
    <string name="share_to">Share</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="distance">Distance</string>
    <string name="distance_km">Distance (km)</string>
    <string name="timeline">Timeline</string>
    <string name="see_more">See more</string>
    <string name="timenote_to_come">DAYZEE TO COME</string>
    <string name="posted_recently">POSTED RECENTLY</string>
    <string name="notifications">Notifications</string>
    <string name="notification_manager">Notification Manager</string>
    <string name="allow_notifications_for">Allow notifications for :</string>
    <string name="notification_manager_settings">Notification manager</string>
    <string name="comments">Comments</string>
    <string name="publish">Publish</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="create_new_group">Create a new group</string>
    <string name="contacts">Contacts</string>
    <string name="name_group">Group\'s name</string>
    <string name="colors">Colors</string>
    <string name="take_a_photo">Take/Choose one picture</string>
    <string name="choose_from_gallery">Multiple selections</string>
    <string name="resize">Resize</string>
    <string name="picture_successfully_added">PICTURE SUCCESSFULLY ADDED</string>
    <string name="mail">Email</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">Type again new password</string>
    <string name="dayzee_connection">Dayzee Connection</string>
    <string name="password">Password</string>
    <string name="current_password">Current password</string>
    <string name="username">Username</string>
    <string name="i_agree_with_terms_and_privacy_policy">I agree with Terms of use and Privacy policy</string>
    <string name="repeat_all">Repeat all</string>
    <string name="ends_in">End</string>
    <string name="the">The</string>
    <string name="after">After</string>
    <string name="occurences">occurences</string>
    <string name="validate">VALIDATE</string>
    <string name="repeat_the">Repeat the</string>
    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
    <string name="sunday_initial">S</string>
    <string name="_30_occurrences_maximum_are_allowed">30 occurrences maximum</string>
</resources>