<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:layout_margin="8dp"
        android:id="@+id/modify_curent_password_old_password"
        android:hint="@string/current_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_margin="8dp"
        android:id="@+id/modify_curent_password_new_password"
        android:hint="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/modify_curent_password_old_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_margin="8dp"
        android:id="@+id/modify_curent_password_new_new_password"
        android:hint="@string/new_password_again"
        app:layout_constraintTop_toBottomOf="@id/modify_curent_password_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>