<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/dialog_reccurence_repeat_tv"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/repeat_all"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <it.sephiroth.android.library.numberpicker.NumberPicker
        app:layout_constraintBottom_toBottomOf="@id/dialog_reccurence_repeat_tv"
        app:layout_constraintTop_toTopOf="@id/dialog_reccurence_repeat_tv"
        app:layout_constraintStart_toEndOf="@id/dialog_reccurence_repeat_tv"
        android:layout_marginStart="16dp"
        style="@style/NumberPicker.Filled.Horizontal"
        app:picker_max="30"
        app:picker_min="1"
        android:progress="1"
        app:picker_stepSize="1"
        app:picker_tracker="exponential"
        app:picker_orientation="vertical"
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:background="@drawable/custom_bg_spinner"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_reccurence_repeat_tv"
        app:layout_constraintTop_toTopOf="@id/dialog_reccurence_repeat_tv"
        app:layout_constraintStart_toEndOf="@id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner_reccurence"
            android:layout_width="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
        android:id="@+id/dialog_reccurence_repeat_week"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_repeat_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/repeat_the"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/dialog_reccurence_repeat_month"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_repeat_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/dialog_reccurence_ll"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_repeat_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <mehdi.sakout.fancybuttons.FancyButton
            fancy:fb_defaultColor="@color/colorAccent"
            fancy:fb_radius="90dp"
            fancy:fb_text="@string/monday_initial"
            android:layout_marginEnd="8dp"
            fancy:fb_textColor="@color/colorBackground"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/choose_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_timenote_second_color"
            android:id="@+id/dialog_reccurence_monday"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            fancy:fb_defaultColor="@color/colorText"
            fancy:fb_radius="90dp"
            fancy:fb_text="@string/tuesday_initial"
            android:layout_marginEnd="8dp"
            fancy:fb_textColor="@color/colorBackground"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/choose_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_timenote_second_color"
            android:id="@+id/dialog_reccurence_tuesday"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            fancy:fb_defaultColor="@color/colorText"
            fancy:fb_radius="90dp"
            fancy:fb_text="@string/wednesday_initial"
            android:layout_marginEnd="8dp"
            fancy:fb_textColor="@color/colorBackground"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/choose_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_timenote_second_color"
            android:id="@+id/dialog_reccurence_wednesday"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            fancy:fb_defaultColor="@color/colorText"
            fancy:fb_radius="90dp"
            fancy:fb_text="@string/thursday_initial"
            android:layout_marginEnd="8dp"
            fancy:fb_textColor="@color/colorBackground"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/choose_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_timenote_second_color"
            android:id="@+id/dialog_reccurence_thursday"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            fancy:fb_defaultColor="@color/colorText"
            fancy:fb_radius="90dp"
            fancy:fb_text="@string/friday_initial"
            android:layout_marginEnd="8dp"
            fancy:fb_textColor="@color/colorBackground"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/choose_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_timenote_second_color"
            android:id="@+id/dialog_reccurence_friday"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            fancy:fb_defaultColor="@color/colorText"
            fancy:fb_radius="90dp"
            fancy:fb_text="@string/saturday_initial"
            android:layout_marginEnd="8dp"
            fancy:fb_textColor="@color/colorBackground"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/choose_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_timenote_second_color"
            android:id="@+id/dialog_reccurence_saturday"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            fancy:fb_defaultColor="@color/colorText"
            fancy:fb_radius="90dp"
            fancy:fb_text="@string/sunday_initial"
            fancy:fb_textColor="@color/colorBackground"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/choose_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_timenote_second_color"
            android:id="@+id/dialog_reccurence_sunday"
            android:layout_width="28dp"
            android:layout_height="28dp"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="36dp"
        android:id="@+id/dialog_reccurence_end_in_tv"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ends_in"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



        <RadioButton
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_end_in_tv"
            android:textSize="18sp"
            android:scaleY="0.75"
            android:scaleX="0.75"
            android:text="@string/the"
            android:id="@+id/dialog_reccurence_the"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_the"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="3dp"
            android:scaleY="0.75"
            android:scaleX="0.75"
            android:text="@string/after"
            android:textSize="18sp"
            android:id="@+id/dialog_reccurence_after"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
        android:padding="12dp"
        android:background="@drawable/custom_bg_spinner"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:text="23 mai 2022"
        android:layout_marginStart="64dp"
        android:id="@+id/dialog_reccurence_date"
        app:layout_constraintTop_toTopOf="@id/dialog_reccurence_the"
        app:layout_constraintBottom_toBottomOf="@id/dialog_reccurence_the"
        app:layout_constraintStart_toEndOf="@id/dialog_reccurence_the"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <it.sephiroth.android.library.numberpicker.NumberPicker
        app:layout_constraintBottom_toBottomOf="@id/dialog_reccurence_after"
        app:layout_constraintTop_toTopOf="@id/dialog_reccurence_after"
        app:layout_constraintStart_toStartOf="@id/dialog_reccurence_date"
        style="@style/NumberPicker.Filled.Horizontal"
        app:picker_max="30"
        app:picker_min="1"
        android:progress="1"
        app:picker_stepSize="1"
        app:picker_tracker="exponential"
        app:picker_orientation="vertical"
        android:id="@+id/numberPicker_occurences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:text="@string/occurences"
        android:id="@+id/dialog_reccurence_occurences"
        app:layout_constraintTop_toTopOf="@id/numberPicker_occurences"
        app:layout_constraintBottom_toBottomOf="@id/numberPicker_occurences"
        app:layout_constraintStart_toEndOf="@id/numberPicker_occurences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/dialog_reccurence_validate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="84dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_occurences"
        fancy:fb_borderColor="@android:color/transparent"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/validate"
        fancy:fb_textColor="@android:color/black"
        fancy:fb_textSize="12sp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pb"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_occurences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:drawablePadding="4dp"
        android:textColor="@color/colorText"
        android:drawableStart="@drawable/ic_baseline_error_24"
        android:drawableTint="@color/colorText"
        android:text="@string/_30_occurrences_maximum_are_allowed"
        app:layout_constraintTop_toBottomOf="@id/dialog_reccurence_validate"
        app:layout_constraintStart_toStartOf="@id/dialog_reccurence_validate"
        app:layout_constraintEnd_toEndOf="@id/dialog_reccurence_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>