<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/logo_dayzee_new"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:paddingHorizontal="48dp"
        android:src="@drawable/dayzee"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/signup_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:paddingVertical="10dp"
        android:textSize="14sp"
        android:hint="@string/username"
        android:textColorHint="#757575"
        android:textColor="@android:color/black"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/signup_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_dayzee_new"
        android:background="@drawable/edit_text_bg"
        />

    <EditText
        android:id="@+id/signup_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:paddingVertical="10dp"
        android:textSize="14sp"
        android:textColorHint="#757575"
        android:textColor="@android:color/black"
        android:hint="@string/mail"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/signup_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:paddingVertical="10dp"
        android:textSize="14sp"
        android:hint="@string/password"
        android:textColorHint="#757575"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/signup_connect"
        android:layout_marginBottom="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_mail" />

    <CheckBox
        android:id="@+id/agree_cb"
        app:layout_constraintTop_toBottomOf="@id/signup_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:scaleY="0.9"
        android:scaleX="0.9"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/agreee_tv"
        android:text="@string/i_agree_with_terms_and_privacy_policy"
        app:layout_constraintStart_toEndOf="@id/agree_cb"
        app:layout_constraintTop_toTopOf="@id/agree_cb"
        app:layout_constraintBottom_toBottomOf="@id/agree_cb"
        app:layout_constraintEnd_toEndOf="@id/signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/signup_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password"
        fancy:fb_borderColor="@android:color/transparent"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/dayzee_connection"
        fancy:fb_textColor="@android:color/black"
        fancy:fb_textSize="14sp" />

</androidx.constraintlayout.widget.ConstraintLayout>